--- a/employers/package.json
+++ b/employers/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://maxim-mazurenko.github.io/PetProjects/employers/build",
   "name": "employers",
   "version": "0.1.0",
   "private": true,
